--- a/css/style.scss
+++ b/css/style.scss
@@ -24,6 +24,7 @@ header{
 	background: $background-color;
 	color: #fff;
 	-webkit-font-smoothing: antialiased;
+	
 }
 
 header .container{
@@ -63,6 +64,8 @@ header .container:after{ content: normal; }
 
 #icon-hamburger:before{
 	color: $gold;
+	//font-size: 2em;
+	//background-color: white;
 	@media screen and (min-width: 600px){
 		display: none;
 	} 
@@ -128,11 +131,12 @@ ul{
 	}
 
 	ul{
-		display: none;
 		position: absolute;
 		margin-top: 0;
 		padding-top: 0;
-		
+		@media screen and (min-width: 600px){
+			display: none;
+		}
 	}
 
 	li:hover ul{
@@ -207,7 +211,6 @@ ul{
 			text-align: center;
 			line-height: 2;
 		}
-
 	}
 
 	a{
@@ -223,8 +226,9 @@ ul{
 	}
 }
 
+
 #sidemenu{
-	$width: 160px;
+	$width: 170px;
 	position: absolute;
 	left: -$width;
 	top: 0;
@@ -232,6 +236,7 @@ ul{
 	transition: left 0.4s ease;
 	background: white;
 	text-align: center;
+	height: 90vh;
 
 
 	ul{
@@ -240,10 +245,15 @@ ul{
 		margin-left: 0;
 		padding-left: 0;
 
+
+
 		li{
 			border-bottom: 1px dotted white;
-			text-align: center;
+			text-align: left;
+			padding-left: 1.5em;
 			line-height: 2;
+			font-size: 1.1em;
+			
 		}
 
 	}
@@ -289,14 +299,18 @@ body.show_usermenu .pusher{
 
 body.show_sidemenu .pusher{
 	// margin-left: 150px;
-	transform: translate3d(150px,0,0);
+	transform: translate3d(170px,0,0);
+
 }
 /*---------------------------- Page with name -------------------------------------------*/
 
 .title{
 	display: flex;
 	flex-direction: column;
-	height: 500px;  /* Remove this once content in page */
+	margin-top: 80px;
+	min-height: 500px;  /* Remove this once content in page */
+	text-align: center;
+
 
 	#name1{
 	font-family: 'Economica';
@@ -304,6 +318,8 @@ body.show_sidemenu .pusher{
 	color: $gold;
 	text-align: center;
 	-webkit-font-smoothing: antialiased;
+	letter-spacing: 10px;
+	margin-bottom: 0;
 	}
 
 	#name2{
@@ -312,10 +328,45 @@ body.show_sidemenu .pusher{
 		text-align: center;
 		color: white;
 		-webkit-font-smoothing: antialiased;
+		letter-spacing: 5px;
+		margin-top: 0;
 
 	}
 
 }
+
+.main-pic{
+	display: flex;
+	justify-content: center;
+
+	#x-pic{
+		background-image: url("img/logo-gold.png");
+		background-size: 100% 100%;
+		height: 40px;
+		width: 40px;
+		-webkit-transform: scale(0.8);
+
+	}
+
+	.face-pic{
+		//background-image: url("img/beauty-large.png");
+		background-size: 100% 100%;
+		margin: 10px;
+		height: 180px;
+		width: 400px;
+		background-color: white;
+		-webkit-transform: scale(0.8);
+
+		img{
+			height: 200px;
+		}
+
+	}
+
+	
+}
+
+
 
 
 /*------------------------------------------- Footer -------------------------------------------*/
