--- a/css/style.scss
+++ b/css/style.scss
@@ -347,24 +347,40 @@ body.show_sidemenu .pusher{
 		-webkit-transform: scale(0.8);
 
 	}
+}
 
-	.face-pic{
-		//background-image: url("img/beauty-large.png");
-		background-size: 100% 100%;
-		margin: 10px;
-		height: 180px;
-		width: 400px;
-		background-color: white;
-		-webkit-transform: scale(0.8);
+.face-pic img{
+	margin-top: 60px;
+	width: 95vw;
+	padding: 5px;
+	background-color: white;
+}
 
-		img{
-			height: 200px;
-		}
+.promotion-box{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin: 10px;
+	//background-color: white;
+	border: 5px solid $gold;
+
+	img{
+		width: 20px;
+		height: 20px;
 
 	}
 
-	
-}
+
+	p{
+		color: $gold;
+		font-family: 'Open Sans';
+		font-size: 2.3em;
+		text-align: justify;
+		padding: 10px;
+		
+	}
+}	
+
 
 
 
