--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@ table {
 /*------------------------End Of Normalise --------*/
 body {
   margin: 0;
+  margin: 0 auto;
   font-family: 'Open Sans';
   background-color: #35383c;
   -webkit-transition: padding-top 0.4s ease;
@@ -206,6 +207,7 @@ header {
   -webkit-font-smoothing: antialiased; }
 
 header .container {
+  margin: 0 auto;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -234,6 +236,7 @@ header .container:after {
   content: normal; }
 
 .container {
+  margin: 0 auto;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -504,6 +507,60 @@ body.show_sidemenu .pusher {
     text-align: justify;
     padding: 10px; }
 
+/*---------------------------- Page display treatments --------------------------------*/
+h2 {
+  color: white;
+  font-size: 2em; }
+
+.page-title {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row; }
+
+.flex-row {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.tr-name {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.tr-name h2 {
+  z-index: 2;
+  font-size: 3em; }
+  @media screen and (max-width: 600px) {
+    .tr-name h2 {
+      font-size: 2.5em; } }
+
+.tr-image img {
+  width: 100%; }
+
+@media screen and (max-width: 600px) {
+  .treatments {
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between; } }
+.treatments a {
+  position: relative;
+  display: block;
+  padding: 10px; }
+.treatments a:hover {
+  position: relative;
+  display: block;
+  opacity: 1;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(1, 0, 0, 0.6)), to(rgba(1, 0, 0, 0.6)));
+  background: -webkit-linear-gradient(rgba(1, 0, 0, 0.6), rgba(1, 0, 0, 0.6));
+  background: linear-gradient(rgba(1, 0, 0, 0.6), rgba(1, 0, 0, 0.6)); }
+.treatments #image-w {
+  max-width: 450px; }
+
 /*------------------------------------------- Footer -------------------------------------------*/
 footer {
   display: -webkit-box;
@@ -531,3 +588,100 @@ footer {
     font-size: 3em;
     margin-top: 0;
     padding-bottom: 10px; }
+
+/*----------------------------------- Flexbox ---------------------------------------*/
+.flex {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.flex-1 {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1; }
+
+.flex-2 {
+  -webkit-box-flex: 2;
+  -webkit-flex: 2;
+  -ms-flex: 2;
+  flex: 2; }
+
+.flex-3 {
+  -webkit-box-flex: 3;
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3; }
+
+.flex-column {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+
+.flex-row {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row; }
+
+.flex-j-start {
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start; }
+
+.flex-j-end {
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end; }
+
+.flex-j-center {
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.flex-j-between {
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.flex-j-around {
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around; }
+
+.flex-a-start {
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start; }
+
+.flex-a-end {
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end; }
+
+.flex-a-center {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.flex-a-stretch {
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch; }
+
+.flex-wrap {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
